// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CaseIcon> Nouns with animation (case interrogatives) animate should return person 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-person "
  data-icon="person"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={{}}
  viewBox="0 0 320 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M208 48c0 26.5-21.5 48-48 48s-48-21.5-48-48s21.5-48 48-48s48 21.5 48 48zM152 352V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V256.9L59.4 304.5c-9.1 15.1-28.8 20-43.9 10.9s-20-28.8-10.9-43.9l58.3-97c17.4-28.9 48.6-46.6 82.3-46.6h29.7c33.7 0 64.9 17.7 82.3 46.6l58.3 97c9.1 15.1 4.2 34.8-10.9 43.9s-34.8 4.2-43.9-10.9L232 256.9V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V352H152z"
    fill="currentColor"
    style={{}}
  />
</svg>
`;

exports[`<CaseIcon> Nouns with animation (case interrogatives) inanimate should return tree 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-tree "
  data-icon="tree"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={{}}
  viewBox="0 0 448 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M210.6 5.9L62 169.4c-3.9 4.2-6 9.8-6 15.5C56 197.7 66.3 208 79.1 208H104L30.6 281.4c-4.2 4.2-6.6 10-6.6 16C24 309.9 34.1 320 46.6 320H80L5.4 409.5C1.9 413.7 0 419 0 424.5c0 13 10.5 23.5 23.5 23.5H192v32c0 17.7 14.3 32 32 32s32-14.3 32-32V448H424.5c13 0 23.5-10.5 23.5-23.5c0-5.5-1.9-10.8-5.4-15L368 320h33.4c12.5 0 22.6-10.1 22.6-22.6c0-6-2.4-11.8-6.6-16L344 208h24.9c12.7 0 23.1-10.3 23.1-23.1c0-5.7-2.1-11.3-6-15.5L237.4 5.9C234 2.1 229.1 0 224 0s-10 2.1-13.4 5.9z"
    fill="currentColor"
    style={{}}
  />
</svg>
`;

exports[`<CaseIcon> Nouns with plurality and gender (nouns, personal pronouns 3d) plural femine should return person-dress 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-person-dress "
  data-icon="person-dress"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={{}}
  viewBox="0 0 320 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M160 96c-26.5 0-48-21.5-48-48s21.5-48 48-48s48 21.5 48 48s-21.5 48-48 48zM88 384H70.2c-10.9 0-18.6-10.7-15.2-21.1L93.3 248.1 59.4 304.5c-9.1 15.1-28.8 20-43.9 10.9s-20-28.8-10.9-43.9l53.6-89.2c20.3-33.7 56.7-54.3 96-54.3h11.6c39.3 0 75.7 20.6 96 54.3l53.6 89.2c9.1 15.1 4.2 34.8-10.9 43.9s-34.8 4.2-43.9-10.9l-33.9-56.3L265 362.9c3.5 10.4-4.3 21.1-15.2 21.1H232v96c0 17.7-14.3 32-32 32s-32-14.3-32-32V384H152v96c0 17.7-14.3 32-32 32s-32-14.3-32-32V384z"
    fill="currentColor"
    style={{}}
  />
</svg>
`;

exports[`<CaseIcon> Nouns with plurality and gender (nouns, personal pronouns 3d) plural masculine should return person 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-person "
  data-icon="person"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={{}}
  viewBox="0 0 320 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M208 48c0 26.5-21.5 48-48 48s-48-21.5-48-48s21.5-48 48-48s48 21.5 48 48zM152 352V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V256.9L59.4 304.5c-9.1 15.1-28.8 20-43.9 10.9s-20-28.8-10.9-43.9l58.3-97c17.4-28.9 48.6-46.6 82.3-46.6h29.7c33.7 0 64.9 17.7 82.3 46.6l58.3 97c9.1 15.1 4.2 34.8-10.9 43.9s-34.8 4.2-43.9-10.9L232 256.9V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V352H152z"
    fill="currentColor"
    style={{}}
  />
</svg>
`;

exports[`<CaseIcon> Nouns with plurality and gender (nouns, personal pronouns 3d) plural neuter should return cloud 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-cloud "
  data-icon="cloud"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={{}}
  viewBox="0 0 640 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 336c0 79.5 64.5 144 144 144H512c70.7 0 128-57.3 128-128c0-61.9-44-113.6-102.4-125.4c4.1-10.7 6.4-22.4 6.4-34.6c0-53-43-96-96-96c-19.7 0-38.1 6-53.3 16.2C367 64.2 315.3 32 256 32C167.6 32 96 103.6 96 192c0 2.7 .1 5.4 .2 8.1C40.2 219.8 0 273.2 0 336z"
    fill="currentColor"
    style={{}}
  />
</svg>
`;

exports[`<CaseIcon> Nouns with plurality and gender (nouns, personal pronouns 3d) singular femine should return person-dress 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-person-dress "
  data-icon="person-dress"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={{}}
  viewBox="0 0 320 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M160 96c-26.5 0-48-21.5-48-48s21.5-48 48-48s48 21.5 48 48s-21.5 48-48 48zM88 384H70.2c-10.9 0-18.6-10.7-15.2-21.1L93.3 248.1 59.4 304.5c-9.1 15.1-28.8 20-43.9 10.9s-20-28.8-10.9-43.9l53.6-89.2c20.3-33.7 56.7-54.3 96-54.3h11.6c39.3 0 75.7 20.6 96 54.3l53.6 89.2c9.1 15.1 4.2 34.8-10.9 43.9s-34.8 4.2-43.9-10.9l-33.9-56.3L265 362.9c3.5 10.4-4.3 21.1-15.2 21.1H232v96c0 17.7-14.3 32-32 32s-32-14.3-32-32V384H152v96c0 17.7-14.3 32-32 32s-32-14.3-32-32V384z"
    fill="currentColor"
    style={{}}
  />
</svg>
`;

exports[`<CaseIcon> Nouns with plurality and gender (nouns, personal pronouns 3d) singular masculine should return person 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-person "
  data-icon="person"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={{}}
  viewBox="0 0 320 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M208 48c0 26.5-21.5 48-48 48s-48-21.5-48-48s21.5-48 48-48s48 21.5 48 48zM152 352V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V256.9L59.4 304.5c-9.1 15.1-28.8 20-43.9 10.9s-20-28.8-10.9-43.9l58.3-97c17.4-28.9 48.6-46.6 82.3-46.6h29.7c33.7 0 64.9 17.7 82.3 46.6l58.3 97c9.1 15.1 4.2 34.8-10.9 43.9s-34.8 4.2-43.9-10.9L232 256.9V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V352H152z"
    fill="currentColor"
    style={{}}
  />
</svg>
`;

exports[`<CaseIcon> Nouns with plurality and gender (nouns, personal pronouns 3d) singular neuter should return cloud 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-cloud "
  data-icon="cloud"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={{}}
  viewBox="0 0 640 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 336c0 79.5 64.5 144 144 144H512c70.7 0 128-57.3 128-128c0-61.9-44-113.6-102.4-125.4c4.1-10.7 6.4-22.4 6.4-34.6c0-53-43-96-96-96c-19.7 0-38.1 6-53.3 16.2C367 64.2 315.3 32 256 32C167.6 32 96 103.6 96 192c0 2.7 .1 5.4 .2 8.1C40.2 219.8 0 273.2 0 336z"
    fill="currentColor"
    style={{}}
  />
</svg>
`;

exports[`<CaseIcon> Nouns with plurality only (personal pronouns 1st and 2nd) plural should return person 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-person "
  data-icon="person"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={{}}
  viewBox="0 0 320 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M208 48c0 26.5-21.5 48-48 48s-48-21.5-48-48s21.5-48 48-48s48 21.5 48 48zM152 352V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V256.9L59.4 304.5c-9.1 15.1-28.8 20-43.9 10.9s-20-28.8-10.9-43.9l58.3-97c17.4-28.9 48.6-46.6 82.3-46.6h29.7c33.7 0 64.9 17.7 82.3 46.6l58.3 97c9.1 15.1 4.2 34.8-10.9 43.9s-34.8 4.2-43.9-10.9L232 256.9V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V352H152z"
    fill="currentColor"
    style={{}}
  />
</svg>
`;

exports[`<CaseIcon> Nouns with plurality only (personal pronouns 1st and 2nd) singular should return person 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-person "
  data-icon="person"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={{}}
  viewBox="0 0 320 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M208 48c0 26.5-21.5 48-48 48s-48-21.5-48-48s21.5-48 48-48s48 21.5 48 48zM152 352V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V256.9L59.4 304.5c-9.1 15.1-28.8 20-43.9 10.9s-20-28.8-10.9-43.9l58.3-97c17.4-28.9 48.6-46.6 82.3-46.6h29.7c33.7 0 64.9 17.7 82.3 46.6l58.3 97c9.1 15.1 4.2 34.8-10.9 43.9s-34.8 4.2-43.9-10.9L232 256.9V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V352H152z"
    fill="currentColor"
    style={{}}
  />
</svg>
`;
